--- a/scss/components/_moadal.scss
+++ b/scss/components/_moadal.scss
@@ -47,25 +47,15 @@
       color: $dodger_blue-color;
     }
   }
-
-  &__icon {
-
-    &--cross {
-      transition-property: color;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      fill: currentColor;
-    }
-
-  }
 }
 
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  transition-property: opacity;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.moadal__icon {
+  &--cross {
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    fill: currentColor;
+  }
 }
 
 .inside {
