--- a/scss/utils/_base.scss
+++ b/scss/utils/_base.scss
@@ -39,6 +39,21 @@ body {
     overflow: hidden;
   }
 
+  .is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
   .section {
     padding: 94px 0px 94px 0px;
   }
+
+  .adjust {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
