--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,7 +5,7 @@ footer {
 
 .footer {
 
-  &__link__logo {
+  &__link-logo {
     font-family: Raleway;
     font-weight: bold;
     font-size: 26px;
@@ -20,18 +20,18 @@ footer {
 }
 
 .footer__section {
-  &__links {
+  &-links {
     margin-top: 12px;
     margin-left: 70px;
   }
 
-  &__form {
+  &-form {
     margin-top: 12px;
     margin-left: 90px;
   }
 }
 
-.footer__address {
+.footer-address {
   &__list li:nth-child(1) {
     margin-top: 20px;
   }
@@ -56,13 +56,13 @@ footer {
     }
 
     &--location {
-      @extend .footer__address__link;
+      @extend .footer-address__link;
       color: $ghost_white-color;
     }
   }
 }
 
-.footer__links {
+.footer-links {
   &__title {
     color: $white-color;
     font-weight: bold;
@@ -101,11 +101,11 @@ footer {
   }
 }
 
-.footer__form {
+.footer-form {
   margin-top: 20px;
 
   &__title {
-    @extend .footer__links__title;
+    @extend .footer-links__title;
   }
 
   &__input {
@@ -136,7 +136,7 @@ footer {
   }
 }
 
-.footer__form__button {
+.footer-form__button {
     width: 200px;
     height: 50px;
     background-color: $dodger_blue-color;
@@ -159,7 +159,7 @@ footer {
       background-color: $curious_blue-color;
     }
 
-    &__icon {
+    &-icon {
       fill: currentColor;
       vertical-align: text-top;
     }
